set sojol photo

--- a/project1.html
+++ b/project1.html
@@ -9,6 +9,7 @@
     <title name="sojol">sojol</title>
 </head>
 <body>
+    <img src="IMG_4675 11.jpg " alt="sojol photo" width="30%">
     <a href="https://www.google.com" target="_blank" >
         <h1>LGin</h1>
     </a>
