--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sojol link ..</title>
     <link rel="stylesheet" href="login.css">
     <title name="sojol">sojol</title>
 </head>
